--- a/style.scss
+++ b/style.scss
@@ -4,7 +4,9 @@
 }
 #container {
     display:grid;
-    row-gap: 4vh;
+    row-gap: 2vh;
+    margin-left: 1%;
+    width:98%;
     
     #header {
         display: grid;
@@ -31,18 +33,17 @@
             font-weight: bolder;
             font-size:smaller;
             transition: font-size 0.25s ease-in-out;
+            
+            &:link {
+                color: black;
+            }
+            &:visited {
+                color:blue;
+            }
 
            
         }
-        &:hover {
-            font-size:large;
-            
-
-          
-        }
-        &:visited {
-            color:darkblue;
-        }
+        
     }
     #content {
         width: 100%;
@@ -50,7 +51,7 @@
         min-height: 65vh;
       
         display: grid;
-        row-gap:2vw ;
+        row-gap:1vw ;
       
         #content-one {
             width: 95vw;
@@ -85,6 +86,7 @@
                 color: white;
                 #atagone-content {
                     color:goldenrod;
+                   
                 }
                 
             }
@@ -103,6 +105,7 @@
                     position: absolute;
                     left: 10vw;
                     font-style: italic;
+                    
                 }
             }
             
@@ -114,11 +117,117 @@
     }
     #footer {
         width:100%;
-        min-height: 15vh;
+        min-height: 10vh;
         background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTaqkheI1eHco59pIjVVJ_ScUJ08H9L6hf4-w&usqp=CAU);
         display: grid;
         grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
 
 
     }
+    @media only screen and(min-width:768px)
+    {
+        
+            
+            #header {
+                height: 15vh;
+                h3 {
+                
+                    font-size: xx-large;
+                    #pizza-logo {
+                        top:4vh;
+                        width: 20%;
+                    }
+
+                }
+           
+            }
+            #content {
+                min-height: 75vh;
+                
+                #content-one {
+                    position: relative;
+                  margin-top: 1%;
+                  #ptag-one
+                  {
+                      font-size: 1.4em;
+                  }
+
+                    iframe {
+                        height: 25vh;
+                    }
+                    #contentimage-one {
+                        height: 28vh;
+                    }
+                    #ptag-three {
+                        position: absolute;
+                        left: 65vw;
+                        top:55vh;
+                        font-size:x-large;
+                        #atagtwo-content {
+
+                           position: absolute;
+                           left: 3vw;
+                           top: 5vh;
+                           font-size: larger;
+                            
+                        }
+                    }
+                }
+                
+            }
+            #footer {
+                min-height: 5vh;
+                position: relative;
+                
+                #footerh5-one {
+                    position: absolute;
+                    top: 2vh;
+
+
+                }
+                #footerdiv-one {
+                    position: absolute;
+                    top: 2vh;
+                    left: 40vw;
+                    
+                    
+                    
+                    
+                  
+                }
+                #footerh5-two {
+                    position: absolute;
+                    top: 2vh;
+                    left:70vw;
+                }
+            }
+        
+       
+            
+        
+        
+    
+    }
+    @media only screen  and(min-width:1020px){
+       
+            
+            #header {
+                align-items: center;
+                justify-items: center;
+                width: 100%;
+                position: relative;
+            }
+            h3 {
+                position: absolute;
+                left: 2vw;
+                #pizza-logo {
+                    position: absolute;
+                  
+                }
+            }
+
+        
+    }
+   
 }
+
