--- a/style.scss
+++ b/style.scss
@@ -305,7 +305,7 @@
                     }
                     .condenttwoimages{
                         position: absolute;
-                        border: 5px solid black;
+                        border: 3px solid black;
                         width: 275px;
                         height: 183px;
 
@@ -428,14 +428,38 @@
                
             }
             #footer {
-                position: relative;
+                
                 #footerh5-one{
-                    position: absolute;
+                  
                     left:1vw;
                 }
                 #footerh5-two {
-                    position:absolute;
+                  
                     left:80vw;
+                }
+                #footerdiv-one {
+                   
+                    a {
+                        position: relative;
+                       p {
+                           position: absolute;
+                           top:1vh;
+                           opacity: 0;
+                           box-shadow: 0px 0px 0px grey;
+                          
+                           z-index: 2;
+                           
+                       }
+                       img:hover+p {
+                           opacity: 1;
+                           top: 0;
+                           transition: all 0.25s ease-in-out;
+                          
+                           background-color: white;
+                           color: black;
+                        }
+
+                    }
                 }
                 
             }
